RESOLVED FIXED 255684
[motion-path] Incorrect anchoring when SVG renderers are used
https://bugs.webkit.org/show_bug.cgi?id=255684
Summary [motion-path] Incorrect anchoring when SVG renderers are used
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-19 15:47:36 PDT
Tim Nguyen (:ntim)
Comment 3 2023-10-22 01:50:28 PDT
EWS
Comment 4 2023-10-22 22:09:38 PDT
Committed 269642@main (98a4d8515026): <https://commits.webkit.org/269642@main> Reviewed commits have been landed. Closing PR #19400 and removing active labels.
Kiet Ho
Comment 5 2024-08-10 01:42:06 PDT
*** Bug 233340 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.